work pre-special context fixes

--- a/testHTML/es6.html
+++ b/testHTML/es6.html
@@ -1,21 +1,23 @@
-<head>
-<script src="../ext/require/require.js" data-main="../src/music21"></script>
-</head>
-<body>
-Pure ES6 tests...
+<html lang="en">
+    <head>
+        <title>Pure ES6 tests</title>
+    </head>
+    <body>
+        Pure ES6 test. Click the score and the note will go up one pitch.
+        <br>
 
-<script>
-require(['music21'], music21 => {
-    const s = new music21.stream.Stream();
-    const n = new music21.note.Note();
-    s.append(n);
-    let svg;
-    s.renderOptions.events.click = e => {
-        n.pitch.diatonicNoteNum += 1;
-        svg = s.replaceDOM(svg);
-        e.stopPropagation();
-    };
-    svg = s.appendNewDOM();
-});
-</script>
-</body>
+        <script src="../build/music21.debug.js"></script>
+        <script>
+            const s = new music21.stream.Stream();
+            const n = new music21.note.Note();
+            s.append(n);
+            let svg;
+            s.renderOptions.events.click = e => {
+                n.pitch.diatonicNoteNum += 1;
+                svg = s.replaceDOM(svg);
+                e.stopPropagation();
+            };
+            svg = s.appendNewDOM();
+        </script>
+    </body>
+</html>
