--- a/testHTML/audioSearchGame.html
+++ b/testHTML/audioSearchGame.html
@@ -1,10 +1,39 @@
 <html><head>
-<title>Match pitches</title>
-   <script data-main="../src/music21" src="../ext/require/require.js"></script>
- <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
+    <title>Match pitches</title>
+    <script src="../build/music21.debug.js"></script>
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
+</head>
+<body style='text-align: left;'>
+<div style='padding-left: 20px; background-color: white'>
+<h1>Match pitches</h1>
+<h2>Needs Chrome, Firefox, MS Edge, or Safari 11.</h2>
+<button id='startListening'>Start Listening</button>
+<button id='stopListening'>Stop Listening</button>
+<button id='bassClef'>Bass</button>
+<button id='trebleClef'>Treble</button>
+<button id='naturals'>Key of C</button>
+<button id='accidentals'>Use Accidentals (Harder)</button>
+<button id='playNotes'>Play Notes</button>
+<button id='muteNotes'>Don't Play Notes (Harder)</button><br/>
+
+<div id='given' style='float: left'>
+    <div id='givenSVGDiv' style='margin-left: 80px'></div>
+</div>
+
+<div id='userAgent' style='float: left'>
+	<div id='SVGDiv' style='margin-left: 80px'></div>
+	<div id='counterHolder' style='position: relative; text-align: center; border: 1px solid black; width: 340px'>
+	    <div id='counter' style='position: relative; width: 40px; background-color: white; height: 30px'>&nbsp;</div>
+	</div>
+</div>
+&nbsp;<br>
+&nbsp;<br>
+&nbsp;<br>
+&nbsp;<br>
+
+</div>
    <script>
-   require(['music21'], function (music21) {
        nnn = new music21.note.Note("C4");
        nnn.duration.type = 'whole';
 
@@ -176,37 +205,8 @@
 	       }
        };
        music21.audioSearch.sampleCallback = sampleCallback;
-   });
    </script>
-</head>
-<body style='text-align: left;'>
-<div style='padding-left: 20px; background-color: white'>
-<h1>Match pitches</h1>
-<h2>Needs Chrome, Firefox, MS Edge, or Safari 11.</h2>
-<button id='startListening'>Start Listening</button>
-<button id='stopListening'>Stop Listening</button>
-<button id='bassClef'>Bass</button>
-<button id='trebleClef'>Treble</button>
-<button id='naturals'>Key of C</button>
-<button id='accidentals'>Use Accidentals (Harder)</button>
-<button id='playNotes'>Play Notes</button>
-<button id='muteNotes'>Don't Play Notes (Harder)</button><br/>
 
-<div id='given' style='float: left'>
-    <div id='givenSVGDiv' style='margin-left: 80px'></div>
-</div>
 
-<div id='userAgent' style='float: left'>
-	<div id='SVGDiv' style='margin-left: 80px'></div>
-	<div id='counterHolder' style='position: relative; text-align: center; border: 1px solid black; width: 340px'>
-	    <div id='counter' style='position: relative; width: 40px; background-color: white; height: 30px'>&nbsp;</div>
-	</div>
-</div>
-&nbsp;<br>
-&nbsp;<br>
-&nbsp;<br>
-&nbsp;<br>
-
-</div>
 </body>
 </html>
