--- a/testHTML/audioSearchTest.html
+++ b/testHTML/audioSearchTest.html
@@ -1,10 +1,30 @@
 <html><head>
 <title>HTML5 Pitch Detector</title>
-   <script data-main="../src/music21" src="../ext/require/require.js"></script>
- <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
-   <script>
-   require(['music21'], function (music21) {
+    <script src="../build/music21.debug.js"></script>
+    <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
+</head>
+<body style='text-align: left;'>
+<div style='padding-left: 20px; background-color: white'>
+<h1>HTML5/Music21 Audio Pitch Listener</h1>
+<h2>Works on Chrome and Firefox (recent) only.</h2>
+<h3>Be sure to select <b>Bass</b> or <b>Treble</b> to help guide pitch detection.</h3>
+<button id='startListening'>Start Listening</button>
+<button id='stopListening'>Stop Listening</button>
+<button id='bassClef'>Bass</button>
+<button id='trebleClef'>Treble</button>
+
+<div id='SVGDiv' style='margin-left: 80px'></div>
+<div id='counterHolder' style='position: relative; text-align: center; border: 1px solid black; width: 340px'>
+    <div id='counter' style='position: relative; width: 40px; background-color: white; height: 30px'>&nbsp;</div>
+</div>
+&nbsp;<br>
+&nbsp;<br>
+&nbsp;<br>
+&nbsp;<br>
+
+</div>
+<script>
        nnn = new music21.note.Note("C4");
        nnn.duration.type = 'whole';
        sss = new music21.stream.Stream();
@@ -20,7 +40,7 @@
        $('#bassClef').on('click', function () {
            sss.clef = new music21.clef.Clef('bass');
            music21.audioSearch.minFrequency = new music21.pitch.Pitch('F2').frequency;
-           music21.audioSearch.maxFrequency = new music21.pitch.Pitch('F4').frequency;       
+           music21.audioSearch.maxFrequency = new music21.pitch.Pitch('F4').frequency;
            sss.replaceDOM();
        })
        $('#trebleClef').on('click', function () {
@@ -57,32 +77,10 @@
 	           lastLeft = (lastLeft*9 + newLeft)/10;
 	           $counter.css('background-color', colorString)
 	                   .css('left', lastLeft.toString() + 'px');
-	       }                        
+	       }
        };
        music21.audioSearch.sampleCallback = sampleCallback;
-       
-   });
    </script>
-</head>
-<body style='text-align: left;'>
-<div style='padding-left: 20px; background-color: white'>
-<h1>HTML5/Music21 Audio Pitch Listener</h1>
-<h2>Works on Chrome and Firefox (recent) only.</h2>
-<h3>Be sure to select <b>Bass</b> or <b>Treble</b> to help guide pitch detection.</h3>
-<button id='startListening'>Start Listening</button>
-<button id='stopListening'>Stop Listening</button>
-<button id='bassClef'>Bass</button>
-<button id='trebleClef'>Treble</button>
 
-<div id='SVGDiv' style='margin-left: 80px'></div>
-<div id='counterHolder' style='position: relative; text-align: center; border: 1px solid black; width: 340px'>
-    <div id='counter' style='position: relative; width: 40px; background-color: white; height: 30px'>&nbsp;</div>
-</div>
-&nbsp;<br>
-&nbsp;<br>
-&nbsp;<br>
-&nbsp;<br>
-
-</div>
 </body>
 </html>
