--- a/testHTML/pickleM21.html
+++ b/testHTML/pickleM21.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns = "http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 </head>
 <body>
+<h1>A test of pickling and unpickling with jsonpickleJS</h1>
+<div>Not currently working in 2019 December</div>
 <script src="../build/music21.debug.js" type="application/javascript"></script>
 <script type="text/javascript">
  fromPython = music21.fromPython;
@@ -39,7 +40,6 @@
  s.append(nOut);
  s.appendNewDOM();
 </script>
-<h1>A test of pickling and unpickling with jsonpickleJS</h1>
 </body>
 </html>
 
