--- a/testHTML/demo-DragScore.html
+++ b/testHTML/demo-DragScore.html
@@ -1,29 +1,27 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns = "http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
  <!-- midi.js package -->
-  <script data-main="../src/music21" src="../ext/require/require.js"></script>
+<script src="../build/music21.debug.js" type="application/javascript"></script>
 
  <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 
 </head>
 <body>
+<h1>Click me to play!</h1>
+<div id="dragContent">
+	<div id="themeDiv"></div>
+	<div id="dropDiv" height="800" width="1200">
+		<h1>Create an 8-measure piece by dropping fragments here! <br/>Go for a smooth pattern. Then click here to play your score.</h1>
+		<button onclick="clearScore()">Clear</button> ... <button onclick="undoAdd()">Undo</button><br></br>
+		<div style="text-align: left">
+			<div id="dropSvg" class='streamHolding' height=200 width=1000><svg></svg></div>
+		</div>
+	</div>
+</div>
+<h2>If you've done that well, hit clear and try to create a 16-measure piece with these fragments.</h2>
 <script type="text/javascript">
-var allStream;
-
-require(['music21'], function(music21) {
-	window.music21 = music21;
-    renderThemes();
-    allStreamScore = new music21.stream.Score();
-    allStreamScore.renderOptions.overriddenWidth = 600;
-    allStream = new music21.stream.Part();
-    allStream.renderOptions.overriddenWidth = 600;
-    allStreamScore.append(allStream);
-    const $newDOM = allStreamScore.createPlayableDOM();
-    $('#dropDiv div').replaceWith($newDOM);
-});
 
 function renderThemes() {
     var themes = [
@@ -107,18 +105,19 @@ function undoAdd() {
     var $newSVG = allStreamScore.createPlayableDOM();
     $('#dropDiv .streamHolding').replaceWith($newSVG[0]);
 }
+
+var allStream;
+
+window.music21 = music21;
+renderThemes();
+allStreamScore = new music21.stream.Score();
+allStreamScore.renderOptions.overriddenWidth = 600;
+allStream = new music21.stream.Part();
+allStream.renderOptions.overriddenWidth = 600;
+allStreamScore.append(allStream);
+const $newDOM = allStreamScore.createPlayableDOM();
+$('#dropDiv div').replaceWith($newDOM);
+
 </script>
-<h1>Click me to play!</h1>
-<div id="dragContent">
-	<div id="themeDiv"></div>
-	<div id="dropDiv" height="800" width="1200">
-		<h1>Create an 8-measure piece by dropping fragments here! <br/>Go for a smooth pattern. Then click here to play your score.</h1>
-		<button onclick="clearScore()">Clear</button> ... <button onclick="undoAdd()">Undo</button><br></br>
-		<div style="text-align: left">
-			<div id="dropSvg" class='streamHolding' height=200 width=1000><svg></svg></div>
-		</div>
-	</div>
-</div>
-<h2>If you've done that well, hit clear and try to create a 16-measure piece with these fragments.</h2>
 </body>
 </html>
