--- a/testHTML/hiChanger.html
+++ b/testHTML/hiChanger.html
@@ -2,18 +2,18 @@
 <head>
  <title>Hi</title>
     <link rel="stylesheet" href="../css/m21.css" type="text/css" />
-    <script data-main="../src/music21"
-            loadSoundFont="violin"
-         src="../ext/require/require.js"></script>
 </head>
 <body>
+<div>Just a single chord that plays with a violin sound when loaded</div>
+<script src="../build/music21.debug.js"></script>
 <script>
-require(['music21'], function (music21) {
-    var ch = new music21.chord.Chord(["C#", "E", "F#5"]);
+music21.miditools.loadSoundfont('violin', vln =>  {
+    const ch = new music21.chord.Chord(["C#", "E", "F#5"]);
     ch.duration.type="whole";
     ch.duration.dots = 1;
-    
-    s = new music21.stream.Measure();
+
+    const s = new music21.stream.Measure();
+    s.instrument = vln;
     s.append(ch);
     s.appendNewDOM();
 });
