--- a/testHTML/keyboard.html
+++ b/testHTML/keyboard.html
@@ -6,6 +6,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     </head>
     <body>
+    <h1>A keyboard that can be clicked on.</h1>
     <div id="keyboardDiv"></div>
     <script src="../build/music21.debug.js"></script>
     <script>
