--- a/testHTML/midiInRequire.html
+++ b/testHTML/midiInRequire.html
@@ -1,25 +1,23 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns = "http://www.w3.org/1999/xhtml">
+<html lang="en">
     <head>
         <title>MIDI In/Jazz Test for Music21j</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <!-- for MSIE 10 on Windows 8 -->
-        <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true"/>
-        <script data-main="../src/music21.js" src="../ext/require/require.js"></script>
+        <meta http-equiv="X-UA-Compatible" content="requiresActiveX=true" />
         <link rel="stylesheet" href="../css/m21.css" type="text/css" />
 
-		<script>
-		require(['music21'], function (music21) {
-		    music21.webmidi.createSelector($("#putMidiSelectHere"));
-		    music21.miditools.callBacks.general = music21.miditools.sendToMIDIjs;
-		});			
-		</script>
     </head>
     <body>
 		<div>
-		MIDI Input: <div id="putMidiSelectHere" />
+            MIDI Input: <div id="putMidiSelectHere"></div>
 		</div>
 		<div class='streamHolding'>
 	    </div>
+    	<script src="../build/music21.debug.js"></script>
+		<script>
+        music21.webmidi.createSelector($("#putMidiSelectHere"));
+        music21.miditools.callbacks.general = music21.miditools.sendToMIDIjs;
+		</script>
+
     </body>
 </html>
