--- a/testHTML/demo-DragScore.html
+++ b/testHTML/demo-DragScore.html
@@ -4,19 +4,19 @@
  <!-- midi.js package -->
 <script src="../build/music21.debug.js" type="application/javascript"></script>
 
- <link rel="stylesheet" href="http://web.mit.edu/music21/doc/_static/m21.css" type="text/css" />
- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
+ <link rel="stylesheet" href="../css/m21.css" type="text/css" />
+ <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 
 </head>
 <body>
 <h1>Click me to play!</h1>
 <div id="dragContent">
 	<div id="themeDiv"></div>
-	<div id="dropDiv" height="800" width="1200">
+	<div id="dropDiv" height="800" width="1200" style="border: 2px dashed black">
 		<h1>Create an 8-measure piece by dropping fragments here! <br/>Go for a smooth pattern. Then click here to play your score.</h1>
 		<button onclick="clearScore()">Clear</button> ... <button onclick="undoAdd()">Undo</button><br></br>
 		<div style="text-align: left">
-			<div id="dropSvg" class='streamHolding' height=200 width=1000><svg></svg></div>
+			<div id="dropSvg" class='streamHolding' height=200 width=1000></div>
 		</div>
 	</div>
 </div>
@@ -24,7 +24,7 @@
 <script type="text/javascript">
 
 function renderThemes() {
-    var themes = [
+    const themes = [
         'c4 e g g',
         "c'4 g2 e4",
         'c2 r',
@@ -39,74 +39,89 @@ function renderThemes() {
         "c8 c e e g g c'4",
         "c4. g8 c'4 e'",
     ];
-    var themeDivs = [];
-    r = new music21.vfShow.Renderer(); // should be static method;
+    const themeDivs = [];
+    const r = new music21.vfShow.Renderer(); // should be static method;
 
-    for (var i = 0; i < themes.length; i++) {
-        var thisTheme = themes[i];
-        var myTNStream = music21.tinyNotation.TinyNotation(thisTheme);
-        var myStream = new music21.stream.Measure();
+	let dragged;
+
+    for (let i = 0; i < themes.length; i++) {
+        const thisTheme = themes[i];
+        const myTNStream = music21.tinyNotation.TinyNotation(thisTheme);
+        const myStream = new music21.stream.Measure();
+        myStream.autoBeam = true;
         myStream.elements = myTNStream.getElementsByClass('Measure').get(0).elements;
-        myStream.timeSignature = '4/4';
+        myStream.timeSignature = new music21.meter.TimeSignature('4/4');
         const $nc = myStream.createPlayableDOM();
-        $('#themeDiv').append($nc);
-        // here is where we create something!
-        $nc
-            .draggable({
-                containment: 'body',
-                stack: '#themeDiv .streamHolding',
-                cursor: 'move',
-                revert: true,
-            })
-            .data('stream', myStream);
+        $nc.data('stream', myStream);
+        const $themeDiv = $('#themeDiv');
+		$themeDiv.append($nc);
+		$nc.attr('draggable', 'true');
+		$nc.on('dragstart', e => { dragged = e.target; });
+        // // here is where we create something!
+        // $nc
+        //     .draggable({
+        //         containment: 'body',
+        //         stack: '#themeDiv .streamHolding',
+        //         cursor: 'move',
+        //         revert: true,
+        //     })
+        //     .data('stream', myStream);
         $nc[0].ondblclick = $nc[0].onclick; // not working right now...
         $nc[0].onclick = undefined;
         themeDivs.push($nc);
         r.removeFormatterInformation(myStream, true); // recursive.
 
-        if (i % 4 === 3) {
-            $('#themeDiv').append($('<br/>'));
-            // alert(nc);
-        }
+        // if (i % 4 === 3) {
+        //     $themeDiv.append($('<br/>'));
+        //     // alert(nc);
+        // }
     }
     $('body').append($('<br/>'));
-    $('#dropDiv').droppable({
-        accept: '#themeDiv .streamHolding',
-        hoverClass: 'hovered',
-        drop: handleThemeDrop,
-    });
-
+    $('html').on('drop', e => console.log(e));
+    $('#dropDiv').on('drop', e => {
+		e.preventDefault();
+		e.stopPropagation();
+    	handleThemeDrop($(dragged).data('stream'));
+	}).on("dragover", e => {
+    	// must cancel dragover even or drop never occurs.
+		e.preventDefault();
+    	e.stopPropagation();
+	});
+	// {
+    //     accept: '#themeDiv .streamHolding',
+    //     hoverClass: 'hovered',
+    //     drop: handleThemeDrop,
+    // }
     // themeDivs[0].style.display = 'none';
 }
 
-function handleThemeDrop(event, ui) {
-    var containedStream = ui.draggable.data('stream');
-    var containedStreamCopy = containedStream.clone(true);
+function handleThemeDrop(containedStream) {
+    const containedStreamCopy = containedStream.clone(true);
 
     allStream.append(containedStreamCopy);
     allStreamScore.resetRenderOptions(true); // recursive
-    for (var i = 0; i < allStream.length; i++) {
+    for (let i = 0; i < allStream.length; i++) {
         if (i % 4 === 3) {
             allStream.get(i).renderOptions.rightBarline = 'double';
         }
     }
-    var $svgDiv = allStreamScore.replaceDOM($('#dropDiv .streamHolding'));
+    allStreamScore.replaceDOM($('#dropDiv .streamHolding'));
     // alert(allStream.hi);
 }
 
 function clearScore() {
     allStream.elements = [];
-    var $newSVG = allStreamScore.createPlayableDOM();
+    const $newSVG = allStreamScore.createPlayableDOM();
     $('#dropDiv .streamHolding').replaceWith($newSVG[0]);
 }
 
 function undoAdd() {
     allStream.elements = allStream.elements.slice(0, allStream.length - 1);
-    var $newSVG = allStreamScore.createPlayableDOM();
+    const $newSVG = allStreamScore.createPlayableDOM();
     $('#dropDiv .streamHolding').replaceWith($newSVG[0]);
 }
 
-var allStream;
+let allStream;
 
 window.music21 = music21;
 renderThemes();
@@ -116,7 +131,7 @@ allStream = new music21.stream.Part();
 allStream.renderOptions.overriddenWidth = 600;
 allStreamScore.append(allStream);
 const $newDOM = allStreamScore.createPlayableDOM();
-$('#dropDiv div').replaceWith($newDOM);
+$('#dropSvg').replaceWith($newDOM);
 
 </script>
 </body>
