--- a/tests/index.html
+++ b/tests/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Music21 QUnit Tests</title>
@@ -8,18 +8,35 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+  <div id="streamAppend"></div>
   <script src="./music21.tests.js"></script>
   <script>
-  QUnit.config.autoload = false;
-  QUnit.config.autostart = false;
-  for (const testModule in m21Tests.default) {
-      if (typeof m21Tests.default[testModule] === 'function') {
-          const testSuite = m21Tests.default[testModule];
-          testSuite();
+    music21.defaults.appendLocation = '#streamAppend';
+    // test_name_to_id = {};
+    QUnit.config.autoload = false;
+    QUnit.config.autostart = false;
+    for (const testModule in m21Tests.default) {
+        if (typeof m21Tests.default[testModule] === 'function') {
+            const testSuite = m21Tests.default[testModule];
+            testSuite();
+        }
+    }
+    QUnit.testDone(details => {
+      const testId = details.testId;
+      const m21Output = Array.from(document.querySelector('#streamAppend').childNodes);
+      if (m21Output.length) {
+        const domOut = document.getElementById('qunit-test-output-' + testId);
+        const sourceOut = domOut.querySelector('.qunit-source');
+        const m21Div = document.createElement('div');
+        m21Div.classList.add('m21output');
+        m21Div.append(...m21Output);  // will remove from streamAppend in process.
+        sourceOut.append(m21Div);
+        const counts = domOut.querySelector('.counts');
+        counts.innerHTML += ` + ${m21Output.length} outputs`;
       }
-  }
-  QUnit.load();
-  QUnit.start();
+    });
+    QUnit.load();
+    QUnit.start();
   </script>
 </body>
 </html>
