make music21j work online

--- a/testHTML/chord_violin_test.html
+++ b/testHTML/chord_violin_test.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div>Just a single chord that plays with a violin sound when loaded</div>
-<script src="../build/music21.debug.js"></script>
+<script src="../releases/music21.debug.js"></script>
 <script>
 music21.miditools.loadSoundfont('violin', vln =>  {
     const ch = new music21.chord.Chord(["C#", "E", "F#5"]);
