--- a/testHTML/delayMic.html
+++ b/testHTML/delayMic.html
@@ -1,6 +1,6 @@
 <html><head>
 <title>Stacey Canon</title>
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <link rel="stylesheet" href="../css/m21.css" type="text/css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
