--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -13,7 +13,7 @@ Only for historical nostalgia...
 <label for="textId">Note/QL</label><input type="text" value="E_2 F_1.5 G_.5 E_2" id="textId" onchange="renderIt()"/>
 </form>
 
-<script src="../build/music21.debug.js" type="application/javascript"></script>
+<script src="../releases/music21.debug.js" type="application/javascript"></script>
 <script type="application/javascript">
  <!--
 function playNote(midiNum) {
