--- a/testHTML/es6.html
+++ b/testHTML/es6.html
@@ -6,7 +6,7 @@
         Pure ES6 test. Click the score and the note will go up one pitch.
         <br>
 
-        <script src="../build/music21.debug.js"></script>
+        <script src="../releases/music21.debug.js"></script>
         <script>
             const s = new music21.stream.Stream();
             const n = new music21.note.Note();
