--- a/testHTML/keyboard.html
+++ b/testHTML/keyboard.html
@@ -8,7 +8,7 @@
     <body>
     <h1>A keyboard that can be clicked on.</h1>
     <div id="keyboardDiv"></div>
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script>
     var k = ""; // will become keyboard.Keyboard object
 
