--- a/testHTML/keyboardJazz.html
+++ b/testHTML/keyboardJazz.html
@@ -8,7 +8,7 @@
     <body>
     <div id="keyboardDiv"></div>
     <div id="putMidiSelectHere"></div>
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script>
     var k = ""; // will become keyboard.Keyboard object
 
