--- a/testHTML/layout.html
+++ b/testHTML/layout.html
@@ -8,7 +8,7 @@
     <body>
         <h1>layout tests -- experimental.  The <code>ls</code> object has a LayoutScore</h1>
         <div id="scoreDiv"></div>
-        <script src="../build/music21.debug.js"></script>
+        <script src="../releases/music21.debug.js"></script>
         <script>
         s = new music21.stream.Score();
         p = music21.tinyNotation.TinyNotation('2/4 c2 d4 e f g a2 c2 d4 e f g a2 c2 d4 e f g a2 c2 d4 e f g a2 c2 d4 e f g a2 c2 d4 e f g a2');
