--- a/testHTML/midiInRequire.html
+++ b/testHTML/midiInRequire.html
@@ -13,7 +13,7 @@
 		</div>
 		<div class='streamHolding'>
 	    </div>
-    	<script src="../build/music21.debug.js"></script>
+    	<script src="../releases/music21.debug.js"></script>
 		<script>
         music21.webmidi.createSelector($("#putMidiSelectHere"));
         music21.miditools.callbacks.general = music21.miditools.sendToMIDIjs;
