--- a/testHTML/musicxmlTest.html
+++ b/testHTML/musicxmlTest.html
@@ -6,7 +6,7 @@
     <h1>MusicXML rendering test</h1>
     <div>This page should render a four-part Bach chorale, first four measures</div>
 
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script>
     mxUrl = 'bachOut.xml';
     sp = new music21.musicxml.xmlToM21.ScoreParser();
