--- a/testHTML/pickleM21.html
+++ b/testHTML/pickleM21.html
@@ -5,7 +5,7 @@
 <body>
 <h1>A test of pickling and unpickling with jsonpickleJS</h1>
 <div>Not currently working in 2019 December</div>
-<script src="../build/music21.debug.js" type="application/javascript"></script>
+<script src="../releases/music21.debug.js" type="application/javascript"></script>
 <script type="text/javascript">
  fromPython = music21.fromPython;
  jsonpickle = fromPython.jsonpickle;
