--- a/testHTML/pitchEditing.html
+++ b/testHTML/pitchEditing.html
@@ -10,7 +10,7 @@
     <div id="editable">
     </div>
 
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script type="application/javascript">
     const s = music21.tinyNotation.TinyNotation("G2 B4 c4");
     s.clef = new music21.clef.Clef('bass');
