--- a/testHTML/pitchEditing_long_score.html
+++ b/testHTML/pitchEditing_long_score.html
@@ -14,7 +14,7 @@
     </div>
 
 
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script type="application/javascript">
         const editable = $('#editable');
         const p1 = music21.tinyNotation.TinyNotation(
