--- a/testHTML/showKeyboard.html
+++ b/testHTML/showKeyboard.html
@@ -29,7 +29,7 @@
     </div>
     <div id="svgDivGrandStaff" style='text-align: center' class='streamHolding'>
     </div>
-        <script src="../build/music21.debug.js"></script>
+        <script src="../releases/music21.debug.js"></script>
 		<script>
 		let m; // will become Measure object soon...
         let m1; // will become Measure object soon...
