--- a/testHTML/autobeam_m21j_test.html
+++ b/testHTML/autobeam_m21j_test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Test music21j autobeam</h1>
-<script src="../build/music21.debug.js"></script>
+<script src="../releases/music21.debug.js"></script>
 <div id="autobeam_goes_here"></div>
 <script>
     const n1 = new music21.note.Note('C5', 0.5);
