--- a/testHTML/colorChanger.html
+++ b/testHTML/colorChanger.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Music21j Color Picker</title>
-  <script src="../build/music21.debug.js"></script>
+  <script src="../releases/music21.debug.js"></script>
 </head>
 <body>
 <h3>Click a note, then click a color to label it.</h3>
