--- a/testHTML/demo-DragScore.html
+++ b/testHTML/demo-DragScore.html
@@ -2,7 +2,7 @@
 <head>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
  <!-- midi.js package -->
-<script src="../build/music21.debug.js" type="application/javascript"></script>
+<script src="../releases/music21.debug.js" type="application/javascript"></script>
 
  <link rel="stylesheet" href="../css/m21.css" type="text/css" />
  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
