--- a/testHTML/embedPlayer.html
+++ b/testHTML/embedPlayer.html
@@ -3,7 +3,7 @@
     <title>Embed midi player demo
     </title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <script src="../build/music21.debug.js" type="application/javascript"></script>
+    <script src="../releases/music21.debug.js" type="application/javascript"></script>
     <link rel="stylesheet" href="../css/m21.css" type="text/css" />
 </head>
 <body>
@@ -17,7 +17,7 @@ The script looks something like this:
 <pre>
 &lt;div id='putMeHere'&gt;
 
-&lt;script src="../build/music21.debug.js" type="application/javascript"&gt;&lt;/script&gt;
+&lt;script src="../releases/music21.debug.js" type="application/javascript"&gt;&lt;/script&gt;
 &lt;script&gt;
     const mp = new music21.miditools.MidiPlayer();
     const domEl = document.querySelector('#putMeHere');
