--- a/testHTML/m21jSandbox.html
+++ b/testHTML/m21jSandbox.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Music21j Sandbox</title>
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <style type="text/css">
         .streamHolding {
             background: #eed;
