--- a/testHTML/midiInKeyChords.html
+++ b/testHTML/midiInKeyChords.html
@@ -19,7 +19,7 @@
 	<div id="svgDiv">
 	</div>
 	<div id="metronomeDiv"></div>
-	<script src="../build/music21.debug.js"></script>
+	<script src="../releases/music21.debug.js"></script>
 	<script>
     let s; // will become Stream object soon...
     let metro; // will become Metronome object soon...
