--- a/testHTML/recordAudio.html
+++ b/testHTML/recordAudio.html
@@ -57,7 +57,7 @@
     refresh is hit.
 </div>
 
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script>
     audioRecorder = new music21.audioRecording.Recorder();
     audioRecorder.initAudio();
