--- a/testHTML/roundCanon.html
+++ b/testHTML/roundCanon.html
@@ -10,7 +10,7 @@
 <div>Dec 2019 -- temporarily not working.</div>
 <div id="canonGoesHere"></div>
 
-<script src="../build/music21.debug.js"></script>
+<script src="../releases/music21.debug.js"></script>
 <script type="text/javascript">
 let m2;
 
