--- a/testHTML/streamClone.html
+++ b/testHTML/streamClone.html
@@ -2,7 +2,7 @@
 <head>
  <title>stream.clone()</title>
  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <link rel="stylesheet" href="../css/m21.css" type="text/css" />
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Code+Pro|Open+Sans:300italic,400italic,700italic,400,300,700" type="text/css" />
 </head>
