--- a/testHTML/xyLocation.html
+++ b/testHTML/xyLocation.html
@@ -17,7 +17,7 @@
         <label for="yOff">Y-top:</label><input type="text" name="yOff" id="yOff" value="0">
 
     </div>
-    <script src="../build/music21.debug.js"></script>
+    <script src="../releases/music21.debug.js"></script>
     <script>
     var s1 = music21.tinyNotation.TinyNotation(
         "4/4 c2 d#4 e8 f g4 r8 B c4~ c16 d32 e f g a b c'1 b4 a g f e8 f e d c4 B c1"
