Stream and stream showing

--- a/testHTML/chord_violin_test.html
+++ b/testHTML/chord_violin_test.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="../css/m21.css" type="text/css" />
 </head>
 <body>
-<div>Just a single chord that plays with a violin sound when loaded</div>
+<div>Just a single chord that plays with a violin sound when loaded and clicked.</div>
 <script src="../build/music21.debug.js"></script>
 <script>
 music21.miditools.loadSoundfont('violin', vln =>  {
