--- a/testHTML/demo-Cuthbert.html
+++ b/testHTML/demo-Cuthbert.html
@@ -1,7 +1,8 @@
 <html lang="en">
 <head>
- <title>First music21j demo</title>
- <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>First music21j demo</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <script src="../build/music21.debug.js"></script>
 </head>
 <body>
 
@@ -13,13 +14,10 @@ Only for historical nostalgia...
 <label for="textId">Note/QL</label><input type="text" value="E_2 F_1.5 G_.5 E_2" id="textId" onchange="renderIt()"/>
 </form>
 
-<script src="../build/music21.debug.js" type="application/javascript"></script>
-<script type="application/javascript">
- <!--
+<script>
 function playNote(midiNum) {
     MIDI.noteOn(0, midiNum, 100, 0);
     MIDI.noteOff(0, midiNum, .35);
-
 }
 
 let stopIntervalId;
@@ -62,7 +60,6 @@ function renderIt() {
 }
 
 drawMe();
--->
 </script>
 
 </body>
